Build as MirageOs unikernel
Co-authored-by: Enguerrand Decorne <decorne.en@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ secret-configuration.nix
 config
 _build/
 .merlin
+mirage/
+**/Makefile
+duniverse/*
+dist/*
+dev/
+dune-workspace
+dune.config
+dune
